[package]
name = "beyond"
version = "0.1.0"
authors = ["Pratik Saxena <pratik2709@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0" # make sure this is the latest version
noise = "0.7.0"
rand = "0.8.0"
ndarray = "0.15.4"
bevy_normal_material = {  git = "https://github.com/mattatz/bevy_normal_material.git" , rev = "e64317399a3659282c43ca3e7dca857ed75e0057"}
bevy_asset_loader = { version = "0.16", features = ["2d"] }
bevy_rapier3d = {version = "0.22.0", features = ["wasm-bindgen"]}
bevy_sprite3d = "2.6"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[lib]
crate-type = ["cdylib", "rlib"]
